src/test/resources/compilation_error/invalid_main_error_2.funcky
numbers: "funcky:numbers"

main = numbers.add 1
